# Intelligent_Transportation_System

./: .gitattributes  .gitignore
front/: CMakeLists.txt  Main.qml  main.cpp
front/backend/: app.py  gradio_support.py  line_detected.html  main.py  park_detected.html  plate_detected.html  sign_detected.html  speed_detected.html  yolov8_detected.html
front/backend/Chinese_license_plate_detection_recognition-main/weights/: plate_detect.pt  plate_rec_color.pth
front/backend/api/card/: license_detected.py  license_detected_interface.py
front/backend/api/line/: line_detect_service.py  line_detected_interface.md  line_detected_interface.py
front/backend/api/park/: model_infer_service.py  (+3 more)
front/backend/models/: plate_detect.onnx  plate_rec_color.onnx  signs_model.onnx  yolo11n.onnx  yolo11s.onnx  yolov8n.onnx  yolov8s.onnx
front/backend/test/: predict_url_list.txt
front/backend/utils/: myutils.py  predict_url_list.txt
front/qml/: AppTheme.qml  CarSpeedDected.qml  DriverLicenseDected.qml  ImageCarPersonDected.qml  ImagePlateDected.qml  LaneDected.qml  LineDected.qml  ParkingSpaceDected.qml  TrafficFlowDected.qml  TrafficSignDected.qml  VideoCarPersonDected.qml  VideoPlateDected.qml
front/service/: BackendServerManager.cpp  BackendServerManager.h  CarSpeedDetectService.cpp  CarSpeedDetectService.h  DriverLicenseDetectService.cpp  DriverLicenseDetectService.h  GradioWebLauncher.cpp  GradioWebLauncher.h  ImageCarPersonDetectService.cpp  ImageCarPersonDetectService.h  ImagePlateDetectService.cpp  ImagePlateDetectService.h  LaneDetectService.cpp  LaneDetectService.h  ParkingSpaceDetectService.cpp  ParkingSpaceDetectService.h  StreamFrameImageProvider.cpp  StreamFrameImageProvider.h  TrafficFlowDetectService.cpp  TrafficFlowDetectService.h  TrafficSignDetectService.cpp  TrafficSignDetectService.h  VideoCarpersonDetectService.cpp  VideoCarpersonDetectService.h  VideoPlateDetectService.cpp  VideoPlateDetectService.h
(+13 files in other folders)
